# HW-C

./: CMakeLists.txt  Makefile  README.md
src/: Main.c
